comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
   <main>
     <header>
-        <h1>Título do Site</h1>
+        <h1>Cursos Grátis</h1>
     </header>
     <article>
-        <h2>Artigo 001</h2>
-        <p>Texto Artigo 001</p>
+        <h2>Cursos HTML5 com CSS3</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex atque possimus voluptatum consectetur dolorem assumenda odio doloremque minima vitae. Consequuntur, expedita possimus doloremque facere illum libero accusantium esse eum omnis.</p>
     </article>
     <article>
-        <h2>Artigo 002</h2>
-        <p>Texto Artigo 002</p>
+        <h2>Curso de JavaScript</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt dolore eligendi error delectus nam tempore dicta est, eaque animi repudiandae quo incidunt voluptas quaerat itaque mollitia consequuntur dolores a atque.</p>
     </article>
   </main>
 </body>
