--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
   <main>
     <header>
         <h1>Cursos Grátis</h1>
+        <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
     </header>
     <article>
         <h2>Cursos HTML5 com CSS3</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex atque possimus voluptatum consectetur dolorem assumenda odio doloremque minima vitae. Consequuntur, expedita possimus doloremque facere illum libero accusantium esse eum omnis.</p>
+        <img src="imagens/curso-html-css.png" alt="Curso JavaScript">
+        <p>O HTML5 é a quinta versão da linguagem de marcação utilizada para estruturar o conteúdo na web. Ele trouxe diversas melhorias em relação às versões anteriores.</p>
+        <p><a href="html5.html">Acesse o curso de HTML5</a></p>
     </article>
     <article>
         <h2>Curso de JavaScript</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt dolore eligendi error delectus nam tempore dicta est, eaque animi repudiandae quo incidunt voluptas quaerat itaque mollitia consequuntur dolores a atque.</p>
+        <img src="imagens/curso-javascript.png" alt="Curso JavaScript">
+        <p>JavaScript é uma linguagem de programação de alto nível, principalmente utilizada para tornar páginas web interativas. </p>
+        <p><a href="javascript.html">Acesse o curso de JavaScript</a></p>
     </article>
   </main>
 </body>
 </html>
+<img src="" alt="">
